# resume-builder

./: .gitignore  LICENSE.txt  README.md  builder.py  doc_api.py  doc_builder.py  gdoc_pipeline.sh  latex_pipeline.sh  pipeline.sh  posting.txt  pyproject.toml  requirements.txt  resume.json
doc/: club_header.json  education.json  extracurricular_banner.json  header.json  job_header.json  line.json  point.json  skeleton.json
input/: resume.json  skill_descriptions.json
latex/: preamble.tex  xelatex_preamble.tex
legacy/: doc_builder.py  gdoc_pipeline.sh
src/resume_builder/: __about__.py  builder.py  data_builder.py  doc_api.py  job_posting.py  keyword_extractor.py  latex_builder.py  main.py  pipeline.py  resume_builder.py
src/resume_builder/backend/: data_builder.py  job_posting.py  latex_builder.py
src/resume_builder/backend/templates/: jakes_default_with_skills.py  workday_default.py
src/resume_builder/frontend/: app.py  strings.py
src/resume_builder/templates/: figtree.py  jakes_default.py  jakes_default_with_skills.py  template.py  workday_default.py
tests/: __init__.py  test_keyword_extractor.py  test_point_rank.py
