[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-builder"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "AbhiJ2706", email = "43829700+AbhiJ2706@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "pandas",
    "transformers",
    "scikit-learn",
    "nltk",
    "spacy",
    "sentence-transformers",
    "yake",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "keybert"
]

[project.urls]
Documentation = "https://github.com/unknown/resume-builder#readme"
Issues = "https://github.com/unknown/resume-builder/issues"
Source = "https://github.com/unknown/resume-builder"

[tool.hatch.version]
path = "src/resume_builder/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
post-install-commands = [
  "python -m spacy download en_core_web_lg",
]
[tool.hatch.envs.default.scripts]
test = "pytest -rP {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
gdoc = "./gdoc_pipeline.sh {args:tests}"
latex = "./latex_pipeline.sh {args:tests}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/resume_builder tests}"

[tool.coverage.run]
source_pkgs = ["resume_builder", "tests"]
branch = true
parallel = true
omit = [
  "src/resume_builder/__about__.py",
]

[tool.coverage.paths]
resume_builder = ["src/resume_builder", "*/resume-builder/src/resume_builder"]
tests = ["tests", "*/resume-builder/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
